Revert "fix : show validation errors and align auth form styles"

--- a/components/RegistrationForm/RegistrationForm.module.css
+++ b/components/RegistrationForm/RegistrationForm.module.css
@@ -61,9 +61,6 @@
   flex-direction: column;
   gap: 4px;
   width: 100%;
-  position: relative;
-  padding-bottom: 16px;
-  margin-bottom: -16px;
 }
 
 .label {
@@ -73,26 +70,12 @@
   color: #000;
 }
 
-.error {
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.4;
-  color: #c00;
-}
-
 .input {
-  line-height: 1.55;
   outline: none;
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   padding: 8px;
   height: 41px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
 }
 
 .fields {
@@ -124,7 +107,6 @@
 
 .title {
   margin-top: 48px;
-  font-weight: 600;
 }
 
 .button {
@@ -133,7 +115,6 @@
   border: solid 1px #d9d9d9;
   outline: none;
   border-radius: 16px;
-  width: 100%;
   height: 41px;
   max-width: 356px;
   margin-top: 11px;
@@ -197,10 +178,6 @@
 
   .label {
     font-size: 15px;
-  }
-
-  .error {
-    font-size: 13px;
   }
 
   .input {
